# MPI-Parallel-Computing

./: CMakeLists.txt  README.md  job_script.slm  main.c  main.h  run_on_balena.sh
